fix cart responsive alignment

--- a/src/components/cart/Cart.css
+++ b/src/components/cart/Cart.css
@@ -5,8 +5,14 @@
     top: 0;
     height: 100vh;
     width: 70vw;
+    padding: 1rem 0;
     z-index: 10;
     transition: all 500ms ease;
+}
+@media screen and (max-width: 800px) {
+    .cartContainer {
+        width: 100vw;
+    }
 }
 .cartContainer h1 {
     text-align: center;
@@ -23,12 +29,23 @@
     gap: 2rem;
     border: 1px solid #ccc;
     padding: 2rem;
+    margin: 1rem;
+}
+@media screen and (max-width: 800px) {
+    .cartItem {
+        gap: 1rem;
+    }
 }
 .itemDescription {
     flex: 0.6;
     display: flex;
     flex-direction: row;
     gap: 2rem;
+}
+@media screen and (max-width: 500px) {
+    .itemDescription {
+        flex-direction: column;
+    }
 }
 .itemDescription img {
     width: 4rem;
@@ -53,6 +70,11 @@
     display: flex;
     flex-direction: row;
     gap: 2rem;
+}
+@media screen and (max-width: 800px) {
+    .addAndRemoveItem {
+        gap: 1rem;
+    }
 }
 .add {
     display: flex;
